--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Барбершоп</title>
+</head>
 
-  </body>
+<body>
+  <header class="main-header">
+    <div class="layout-positioner">
+      <nav>
+        <ul>
+          <li>ИНФОРМАЦИЯ</li>
+          <li>НОВОСТИ</li>
+          <li>ПРАЙС-ЛИСТ</li>
+          <li>МАГАЗИН</li>
+          <li>КОНТАКТЫ</li>
+        </ul>
+      </nav>
+      <a class="btn btn-login" href="#">ВХОД</a>
+    </div>
+  </header>
+
+  <main>
+    <div class="layout-positioner">
+      <img class="logo" src="#" alt="Бородинский">
+
+      <section class="features">
+        <article>
+          <h3>БЫСТРО</h3>
+          <p>МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДЕТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
+        </article>
+        <article>
+          <h3>КРУТО</h3>
+          <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+        </article>
+        <article>
+          <h3>ДОРОГО</h3>
+          <p>НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
+        </article>
+      </section>
+
+      <section class="news-photo">
+        <section class="news">
+          <h2>НОВОСТИ</h2>
+          <article>
+            <p>НАМ НАКОНЕЦ ЗАВЕЗЛИ ЯГЕРМАЙСТЕР! ТЕПЕРЬ ВЫ МОЖЕТЕ ПРОПУСТИТЬ СТАКАНЧИК ВО ВРЕМЯ СТРИЖКИ</p>
+            <data value="11.01.2017">11 января</data>
+          </article>
+          <article>
+            <p>В НАШЕЙ КОМАНДЕ ПОПОЛНЕНИЕ, БОРИС «БРИТВА» СТРИГУНЕЦ, ОБЛАДЕТЕЛЬ МНОЖЕСТВА ТИТУЛОВ И НАГРАД ПОПОЛНИЛ НАШИ СТРОЙНЫЕ РЯДЫ</p>
+            <data value="18.01.2017">18 января</data>
+          </article>
+          <a class="btn" href="#">ВСЕ НОВОСТИ</a>
+        </section>
+        <section class="photo">
+          <h2>ФОТОГАЛЕРЕЯ</h2>
+          <img src="#" alt="#">
+          <a class="btn prev" href="#">НАЗАД</a>
+          <a class="btn next" href="#">ВПЕРЕД</a>
+        </section>
+      </section>
+
+      <section class="contact-reserv">
+        <section class="contact">
+          <h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
+          <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
+          <p>ВРЕМЯ РАБОТЫ:<br> ПН — ПТ: С 10:00 ДО 22:00<br> СБ — ВС: С 10:00 ДО 19:00</p>
+          <a class="btn map" href="#">КАК ПРОЕХАТЬ</a>
+          <a class="btn feedback" href="#">ОБРАТНАЯ СВЯЗЬ</a>
+        </section>
+        <section class="reserv">
+          <h2>ЗАПИСАТЬСЯ</h2>
+          <p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+          <form action="index.html" method="post">
+            <input type="text" name="date" placeholder="ДАТА">
+            <input type="text" name="time" placeholder="ВРЕМЯ">
+            <input type="text" name="name" placeholder="ВАШЕ ИМЯ">
+            <input type="text" name="phone" placeholder="ТЕЛЕФОН">
+            <button class="btn" type="button" name="sent">ОТПРАВИТЬ</button>
+          </form>
+        </section>
+      </section>
+    </div>
+  </main>
+
+  <footer class="main-footer">
+    <div class="layout-positioner">
+      <section class="contacts">
+        <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
+        <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br> КАК НАС НАЙТИ?<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
+      </section>
+      <section class="social">
+        <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
+        <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
+        <a class="btn btn-social fb" href="#">ВКОНТАКТЕ</a>
+        <a class="btn btn-social in" href="#">ВКОНТАКТЕ</a>
+      </section>
+      <section class="copyright">
+        <h4>РАЗРАБОТАНО:</h4>
+        <a class="btn" href="#">HTMLACADEMY.RU</a>
+      </section>
+    </div>
+  </footer>
+
+</body>
 </html>
