(.main-header nav ul) add <a> in <li>

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="layout-positioner">
       <nav>
         <ul>
-          <li>ИНФОРМАЦИЯ</li>
-          <li>НОВОСТИ</li>
-          <li>ПРАЙС-ЛИСТ</li>
-          <li>МАГАЗИН</li>
-          <li>КОНТАКТЫ</li>
+          <li><a href="#">ИНФОРМАЦИЯ</a></li>
+          <li><a href="#">НОВОСТИ</a></li>
+          <li><a href="#">ПРАЙС-ЛИСТ</a></li>
+          <li><a href="#">МАГАЗИН</a></li>
+          <li><a href="#">КОНТАКТЫ</a></li>
         </ul>
       </nav>
       <a class="btn btn-login" href="#">ВХОД</a>
