create html «item.html»

--- a/index.html
+++ b/index.html
@@ -7,102 +7,107 @@
 </head>
 
 <body>
-  <header class="main-header">
-    <div class="layout-positioner">
-      <nav>
-        <ul>
-          <li><a href="#">ИНФОРМАЦИЯ</a></li>
-          <li><a href="#">НОВОСТИ</a></li>
-          <li><a href="#">ПРАЙС-ЛИСТ</a></li>
-          <li><a href="#">МАГАЗИН</a></li>
-          <li><a href="#">КОНТАКТЫ</a></li>
-        </ul>
-      </nav>
-      <a class="btn btn-login" href="#">ВХОД</a>
-    </div>
-  </header>
 
-  <main>
-    <div class="layout-positioner">
-      <img class="logo" src="#" alt="Бородинский">
+<header class="main-header">
+  <div class="layout-positioner">
+    <nav>
+      <ul>
+        <li><a href="#">ИНФОРМАЦИЯ</a></li>
+        <li><a href="#">НОВОСТИ</a></li>
+        <li><a href="#">ПРАЙС-ЛИСТ</a></li>
+        <li><a href="#">МАГАЗИН</a></li>
+        <li><a href="#">КОНТАКТЫ</a></li>
+      </ul>
+    </nav>
+    <a class="btn btn-login" href="#">ВХОД</a>
+  </div>
+</header>
 
-      <section class="features">
+<main>
+  <div class="layout-positioner">
+    <img class="logo" src="#" alt="Бородинский">
+
+    <section class="features">
+      <article>
+        <h3>БЫСТРО</h3>
+        <p>МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДЕТЕЛЬ СТИЛЬНОЙ
+          СТРИЖКИ-МИНУТКИ!</p>
+      </article>
+      <article>
+        <h3>КРУТО</h3>
+        <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+      </article>
+      <article>
+        <h3>ДОРОГО</h3>
+        <p>НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ
+          СТАТУС?</p>
+      </article>
+    </section>
+
+    <section class="news-photo">
+      <section class="news">
+        <h2>НОВОСТИ</h2>
         <article>
-          <h3>БЫСТРО</h3>
-          <p>МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДЕТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
+          <p>НАМ НАКОНЕЦ ЗАВЕЗЛИ ЯГЕРМАЙСТЕР! ТЕПЕРЬ ВЫ МОЖЕТЕ ПРОПУСТИТЬ СТАКАНЧИК ВО ВРЕМЯ СТРИЖКИ</p>
+          <data value="11.01.2017">11 января</data>
         </article>
         <article>
-          <h3>КРУТО</h3>
-          <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+          <p>В НАШЕЙ КОМАНДЕ ПОПОЛНЕНИЕ, БОРИС «БРИТВА» СТРИГУНЕЦ, ОБЛАДЕТЕЛЬ МНОЖЕСТВА ТИТУЛОВ И НАГРАД ПОПОЛНИЛ НАШИ
+            СТРОЙНЫЕ РЯДЫ</p>
+          <data value="18.01.2017">18 января</data>
         </article>
-        <article>
-          <h3>ДОРОГО</h3>
-          <p>НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
-        </article>
+        <a class="btn" href="#">ВСЕ НОВОСТИ</a>
       </section>
+      <section class="photo">
+        <h2>ФОТОГАЛЕРЕЯ</h2>
+        <img src="#" alt="#">
+        <a class="btn prev" href="#">НАЗАД</a>
+        <a class="btn next" href="#">ВПЕРЕД</a>
+      </section>
+    </section>
 
-      <section class="news-photo">
-        <section class="news">
-          <h2>НОВОСТИ</h2>
-          <article>
-            <p>НАМ НАКОНЕЦ ЗАВЕЗЛИ ЯГЕРМАЙСТЕР! ТЕПЕРЬ ВЫ МОЖЕТЕ ПРОПУСТИТЬ СТАКАНЧИК ВО ВРЕМЯ СТРИЖКИ</p>
-            <data value="11.01.2017">11 января</data>
-          </article>
-          <article>
-            <p>В НАШЕЙ КОМАНДЕ ПОПОЛНЕНИЕ, БОРИС «БРИТВА» СТРИГУНЕЦ, ОБЛАДЕТЕЛЬ МНОЖЕСТВА ТИТУЛОВ И НАГРАД ПОПОЛНИЛ НАШИ СТРОЙНЫЕ РЯДЫ</p>
-            <data value="18.01.2017">18 января</data>
-          </article>
-          <a class="btn" href="#">ВСЕ НОВОСТИ</a>
-        </section>
-        <section class="photo">
-          <h2>ФОТОГАЛЕРЕЯ</h2>
-          <img src="#" alt="#">
-          <a class="btn prev" href="#">НАЗАД</a>
-          <a class="btn next" href="#">ВПЕРЕД</a>
-        </section>
+    <section class="contact-reserv">
+      <section class="contact">
+        <h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
+        <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br> ТЕЛЕФОН: +7 (495) 666-02-66
+        </p>
+        <p>ВРЕМЯ РАБОТЫ:<br> ПН — ПТ: С 10:00 ДО 22:00<br> СБ — ВС: С 10:00 ДО 19:00</p>
+        <a class="btn map" href="#">КАК ПРОЕХАТЬ</a>
+        <a class="btn feedback" href="#">ОБРАТНАЯ СВЯЗЬ</a>
       </section>
+      <section class="reserv">
+        <h2>ЗАПИСАТЬСЯ</h2>
+        <p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+        <form action="index.html" method="post">
+          <input type="text" name="date" placeholder="ДАТА">
+          <input type="text" name="time" placeholder="ВРЕМЯ">
+          <input type="text" name="name" placeholder="ВАШЕ ИМЯ">
+          <input type="text" name="phone" placeholder="ТЕЛЕФОН">
+          <button class="btn" type="button" name="sent">ОТПРАВИТЬ</button>
+        </form>
+      </section>
+    </section>
+  </div>
+</main>
 
-      <section class="contact-reserv">
-        <section class="contact">
-          <h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
-          <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br> АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
-          <p>ВРЕМЯ РАБОТЫ:<br> ПН — ПТ: С 10:00 ДО 22:00<br> СБ — ВС: С 10:00 ДО 19:00</p>
-          <a class="btn map" href="#">КАК ПРОЕХАТЬ</a>
-          <a class="btn feedback" href="#">ОБРАТНАЯ СВЯЗЬ</a>
-        </section>
-        <section class="reserv">
-          <h2>ЗАПИСАТЬСЯ</h2>
-          <p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-          <form action="index.html" method="post">
-            <input type="text" name="date" placeholder="ДАТА">
-            <input type="text" name="time" placeholder="ВРЕМЯ">
-            <input type="text" name="name" placeholder="ВАШЕ ИМЯ">
-            <input type="text" name="phone" placeholder="ТЕЛЕФОН">
-            <button class="btn" type="button" name="sent">ОТПРАВИТЬ</button>
-          </form>
-        </section>
-      </section>
-    </div>
-  </main>
-
-  <footer class="main-footer">
-    <div class="layout-positioner">
-      <section class="contacts">
-        <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
-        <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br> КАК НАС НАЙТИ?<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
-      </section>
-      <section class="social">
-        <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
-        <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
-        <a class="btn btn-social fb" href="#">ВКОНТАКТЕ</a>
-        <a class="btn btn-social in" href="#">ВКОНТАКТЕ</a>
-      </section>
-      <section class="copyright">
-        <h4>РАЗРАБОТАНО:</h4>
-        <a class="btn" href="#">HTMLACADEMY.RU</a>
-      </section>
-    </div>
-  </footer>
+<footer class="main-footer">
+  <div class="layout-positioner">
+    <section class="contacts">
+      <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
+      <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br> КАК НАС НАЙТИ?<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
+    </section>
+    <section class="social">
+      <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
+      <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
+      <a class="btn btn-social fb" href="#">ФЕЙСБУК</a>
+      <a class="btn btn-social in" href="#">ИНСТАГРАМ</a>
+    </section>
+    <section class="copyright">
+      <h4>РАЗРАБОТАНО:</h4>
+      <a class="btn" href="#">HTMLACADEMY.RU</a>
+    </section>
+  </div>
+</footer>
 
 </body>
 </html>
