add url in main

--- a/item.html
+++ b/item.html
@@ -11,7 +11,7 @@
 <header class="main-header">
   <div class="layout-center">
     <nav>
-      <a class="logo" href="#"><img src="img/Logo.png"></a>
+      <a class="logo" href="index.html"><img src="img/Logo.png"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
@@ -28,7 +28,7 @@
   <div class="layout-center">
     <h1>набор для путешествий «Baxter of California»</h1>
     <ul class="breadcrumbs">
-      <li><a href="#"></a></li>
+      <li><a href="index.html"></a></li>
       <li><a href="#"></a></li>
       <li><a href="#"></a></li>
       <li><a href="#"></a></li>
