minor changes html

--- a/item.html
+++ b/item.html
@@ -42,8 +42,8 @@
       </div>
     </div>
     <div class="description">
-      <p>ЕСТЬ В НАЛИЧИИ</p>
-      <p class="article-id">ЕСТЬ В НАЛИЧИИ</p>
+      <span>ЕСТЬ В НАЛИЧИИ</span>
+      <span class="article-id">ЕСТЬ В НАЛИЧИИ</span>
       <p class="description">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке
         находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания,
         увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
@@ -52,7 +52,7 @@
         <a class="btn" href="#">КУПИТЬ</a>
       </div>
       <b>В НАБОР ВХОДЯТ:</b>
-      <ul>
+      <ul class="composition">
         <li>Средство для умывания (50 мл)</li>
         <li>Увлажняющий крем (50 мл)</li>
         <li>Крем для бритья (50 мл)</li>
