(minor) add breadcrumbs text

--- a/item.html
+++ b/item.html
@@ -28,10 +28,10 @@
   <div class="layout-center">
     <h1>набор для путешествий «Baxter of California»</h1>
     <ul class="breadcrumbs">
-      <li><a href="index.html"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
+      <li><a href="index.html">ГЛАВНАЯ</a></li>
+      <li><a href="#">МАГАЗИН</a></li>
+      <li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
+      <li><a href="#">набор для путешествий «Baxter of California»</a></li>
     </ul>
     <div class="photos">
       <img class="main-photo" src="img/item1-img3.jpg">
