--- a/item.html
+++ b/item.html
@@ -47,7 +47,7 @@
       <p class="description">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке
         находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания,
         увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-      <div class="byu">
+      <div class="buy">
         <div class="price">2900 РУБ.</div>
         <a class="btn" href="#">КУПИТЬ</a>
       </div>
