add inner urls to «a href»

--- a/item.html
+++ b/item.html
@@ -15,8 +15,8 @@
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
-        <li><a href="#">ПРАЙС-ЛИСТ</a></li>
-        <li><a class="active" href="#">МАГАЗИН</a></li>
+        <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
+        <li><a class="active" href="shop.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
@@ -29,8 +29,8 @@
     <h1>набор для путешествий «Baxter of California»</h1>
     <ul class="breadcrumbs">
       <li><a href="index.html">ГЛАВНАЯ</a></li>
-      <li><a href="#">МАГАЗИН</a></li>
-      <li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
+      <li><a href="shop.html">МАГАЗИН</a></li>
+      <li><a href="shop.html">СРЕДСТВА ДЛЯ УХОДА</a></li>
       <li><a href="#">набор для путешествий «Baxter of California»</a></li>
     </ul>
     <div class="photos">
