--- a/shop.html
+++ b/shop.html
@@ -13,8 +13,8 @@
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
-        <li><a href="#">ПРАЙС-ЛИСТ</a></li>
-        <li><a class="active" href="#">МАГАЗИН</a></li>
+        <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
+        <li><a class="active" href="shop.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
@@ -84,7 +84,7 @@
           «Baxter of California»</a>
         <div class="buy">
           <div class="price">2900 РУБ.</div>
-          <a class="btn" href="#">КУПИТЬ</a>
+          <a class="btn" href="item.html">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
@@ -93,7 +93,7 @@
           «Baxter of California»</a>
         <div class="buy">
           <div class="price">750 РУБ.</div>
-          <a class="btn" href="#">КУПИТЬ</a>
+          <a class="btn" href="item.html">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
@@ -102,7 +102,7 @@
           «SUAVECITO»</a>
         <div class="buy">
           <div class="price">290 РУБ.</div>
-          <a class="btn" href="#">КУПИТЬ</a>
+          <a class="btn" href="item.html">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
@@ -111,7 +111,7 @@
           «American crew»</a>
         <div class="buy">
           <div class="price">500 РУБ.</div>
-          <a class="btn" href="#">КУПИТЬ</a>
+          <a class="btn" href="item.html">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
@@ -120,7 +120,7 @@
           «AMERICAN CREW»</a>
         <div class="buy">
           <div class="price">300 РУБ.</div>
-          <a class="btn" href="#">КУПИТЬ</a>
+          <a class="btn" href="item.html">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
@@ -129,7 +129,7 @@
           «Baxter of California»</a>
         <div class="buy">
           <div class="price">3900 РУБ.</div>
-          <a class="btn" href="#">КУПИТЬ</a>
+          <a class="btn" href="item.html">КУПИТЬ</a>
         </div>
       </article>
     </section>
