--- a/price.html
+++ b/price.html
@@ -13,8 +13,8 @@
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
-        <li><a href="#">ПРАЙС-ЛИСТ</a></li>
-        <li><a class="active" href="#">МАГАЗИН</a></li>
+        <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
+        <li><a class="active" href="shop.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
