(minor) tabs & «lang=ru» & title & class name

--- a/price.html
+++ b/price.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Цены</title>
 </head>
-<body>
 
+<body>
 <header class="main-header">
   <div class="layout-center">
     <nav>
@@ -45,7 +45,8 @@
     </div>
     <div class="about-us">
       <h2>НЕСКОЛЬКО СЛОВ О НАС:</h2>
-      <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+      <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это
+        уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
     </div>
     <div class="layout-right">
       <div class="price">
@@ -66,7 +67,9 @@
         </table>
       </div>
       <div class="location">
-        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в
+          обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и
+          свободно!</p>
       </div>
     </div>
   </div>
