--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Барбершоп</title>
+  <title>Барбершоп</title>
 </head>
 
 <body>
-
 <header class="main-header">
-  <div class="layout-positioner">
+  <div class="layout-center">
     <nav>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
@@ -24,7 +22,7 @@
 </header>
 
 <main>
-  <div class="layout-positioner">
+  <div class="layout-center">
     <img class="logo" src="#" alt="Бородинский">
 
     <section class="features">
@@ -91,7 +89,7 @@
 </main>
 
 <footer class="main-footer">
-  <div class="layout-positioner">
+  <div class="layout-center">
     <section class="contacts">
       <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
       <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br> КАК НАС НАЙТИ?<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
