--- a/item.html
+++ b/item.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Товар</title>
 </head>
 
 <body>
-
 <header class="main-header">
   <div class="layout-center">
     <nav>
@@ -83,6 +81,5 @@
     </section>
   </div>
 </footer>
-
 </body>
 </html>
