--- a/shop.html
+++ b/shop.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Магазин</title>
 </head>
-<body>
 
+<body>
 <header class="main-header">
   <div class="layout-center">
     <nav>
