--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
       <section class="photo">
         <h2>ФОТОГАЛЕРЕЯ</h2>
-        <img src="#" alt="#">
+        <img src="img/our-room.jpg" alt="Наш зал">
         <a class="btn prev" href="#">НАЗАД</a>
         <a class="btn next" href="#">ВПЕРЕД</a>
       </section>
