--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <main>
   <div class="layout-center">
-    <img class="logo" src="#" alt="Бородинский">
+    <img class="logo" src="img/main-logo.png" alt="Бородинский">
 
     <section class="features">
       <article>
