(minor) fix href

--- a/shop.html
+++ b/shop.html
@@ -80,56 +80,56 @@
     <section class="items">
       <article class="item">
         <img src="img/item/item1.jpg">
-        <a href="#">Набор для путешествий<br>
+        <a href="item.html">Набор для путешествий<br>
           «Baxter of California»</a>
         <div class="buy">
           <div class="price">2900 РУБ.</div>
-          <a class="btn" href="item.html">КУПИТЬ</a>
+          <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
         <img src="img/item/item2.jpg">
-        <a href="#">Увлажняющий кондиционер<br>
+        <a href="item.html">Увлажняющий кондиционер<br>
           «Baxter of California»</a>
         <div class="buy">
           <div class="price">750 РУБ.</div>
-          <a class="btn" href="item.html">КУПИТЬ</a>
+          <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
         <img src="img/item/item3.jpg">
-        <a href="#">Гель для волос<br>
+        <a href="item.html">Гель для волос<br>
           «SUAVECITO»</a>
         <div class="buy">
           <div class="price">290 РУБ.</div>
-          <a class="btn" href="item.html">КУПИТЬ</a>
+          <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
         <img src="img/item/item4.jpg">
-        <a href="#">Глина для укладки волос<br>
+        <a href="item.html">Глина для укладки волос<br>
           «American crew»</a>
         <div class="buy">
           <div class="price">500 РУБ.</div>
-          <a class="btn" href="item.html">КУПИТЬ</a>
+          <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
         <img src="img/item/item5.jpg">
-        <a href="#">Гель для волос<br>
+        <a href="item.html">Гель для волос<br>
           «AMERICAN CREW»</a>
         <div class="buy">
           <div class="price">300 РУБ.</div>
-          <a class="btn" href="item.html">КУПИТЬ</a>
+          <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
         <img src="img/item/item6.jpg">
-        <a href="#">Набор для бритья<br>
+        <a href="item.html">Набор для бритья<br>
           «Baxter of California»</a>
         <div class="buy">
           <div class="price">3900 РУБ.</div>
-          <a class="btn" href="item.html">КУПИТЬ</a>
+          <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
     </section>
