delete «href» in social buttons

--- a/item.html
+++ b/item.html
@@ -71,9 +71,9 @@
     </section>
     <section class="social">
       <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
-      <a class="btn btn-social vk" href="img/icon-vkontakte.png">ВКОНТАКТЕ</a>
-      <a class="btn btn-social fb" href="img/icon-facebook.png">ФЕЙСБУК</a>
-      <a class="btn btn-social in" href="img/icon-instagram.png">ИНСТАГРАМ</a>
+      <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
+      <a class="btn btn-social fb" href="#">ФЕЙСБУК</a>
+      <a class="btn btn-social in" href="#">ИНСТАГРАМ</a>
     </section>
     <section class="copyright">
       <h4>РАЗРАБОТАНО:</h4>
