add «alt» & add «h2» to «article» in «shop.html»

--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
 <header class="main-header">
   <div class="layout-center">
     <nav>
-      <a class="logo" href="index.html"><img src="img/Logo.png"></a>
+      <a class="logo" href="index.html"><img src="img/logo.png" alt="Барбершоп"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
@@ -79,54 +79,54 @@
 
     <section class="items">
       <article class="item">
-        <img src="img/item/item1.jpg">
-        <a href="item.html">Набор для путешествий<br>
-          «Baxter of California»</a>
+        <img src="img/item/item1.jpg" alt="Baxter of California">
+        <a href="item.html"><h2>Набор для путешествий<br>
+          «Baxter of California»</h2></a>
         <div class="buy">
           <div class="price">2900 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
-        <img src="img/item/item2.jpg">
-        <a href="item.html">Увлажняющий кондиционер<br>
-          «Baxter of California»</a>
+        <img src="img/item/item2.jpg" alt="Baxter of California">
+        <a href="item.html"><h2>Увлажняющий кондиционер<br>
+          «Baxter of California»</h2></a>
         <div class="buy">
           <div class="price">750 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
-        <img src="img/item/item3.jpg">
-        <a href="item.html">Гель для волос<br>
-          «SUAVECITO»</a>
+        <img src="img/item/item3.jpg" alt="SUAVECITO">
+        <a href="item.html"><h2>Гель для волос<br>
+          «SUAVECITO»</h2></a>
         <div class="buy">
           <div class="price">290 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
-        <img src="img/item/item4.jpg">
-        <a href="item.html">Глина для укладки волос<br>
-          «American crew»</a>
+        <img src="img/item/item4.jpg" alt="American crew">
+        <a href="item.html"><h2>Глина для укладки волос<br>
+          «American crew»</h2></a>
         <div class="buy">
           <div class="price">500 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
-        <img src="img/item/item5.jpg">
-        <a href="item.html">Гель для волос<br>
-          «AMERICAN CREW»</a>
+        <img src="img/item/item5.jpg" alt="AMERICAN CREW">
+        <a href="item.html"><h2>Гель для волос<br>
+          «AMERICAN CREW»</h2></a>
         <div class="buy">
           <div class="price">300 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
       <article class="item">
-        <img src="img/item/item6.jpg">
-        <a href="item.html">Набор для бритья<br>
-          «Baxter of California»</a>
+        <img src="img/item/item6.jpg" alt="Baxter of California">
+        <a href="item.html"><h2>Набор для бритья<br>
+          «Baxter of California»</h2></a>
         <div class="buy">
           <div class="price">3900 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
