--- a/item.html
+++ b/item.html
@@ -9,7 +9,7 @@
 <header class="main-header">
   <div class="layout-center">
     <nav>
-      <a class="logo" href="index.html"><img src="img/Logo.png"></a>
+      <a class="logo" href="index.html"><img src="img/logo.png" alt="Барбершоп"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
@@ -32,11 +32,11 @@
       <li><a href="#">набор для путешествий «Baxter of California»</a></li>
     </ul>
     <div class="photos">
-      <img class="main-photo" src="img/item1-img3.jpg">
+      <img class="main-photo" src="img/item1-img3.jpg" alt="Набор для путешествий">
       <div class="other-photos">
-        <img src="img/item1-img1.jpg">
-        <img src="img/item1-img2.jpg">
-        <img class="active" src="img/item1-img3.jpg">
+        <img src="img/item1-img1.jpg" alt="Набор для путешествий">
+        <img src="img/item1-img2.jpg" alt="Набор для путешествий">
+        <img class="active" src="img/item1-img3.jpg" alt="Набор для путешествий">
       </div>
     </div>
     <div class="description">
