--- a/price.html
+++ b/price.html
@@ -9,7 +9,7 @@
 <header class="main-header">
   <div class="layout-center">
     <nav>
-      <a class="logo" href="index.html"><img src="img/Logo.png"></a>
+      <a class="logo" href="index.html"><img src="img/logo.png" alt="Барбершоп"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
