add «ul» to «form»

--- a/shop.html
+++ b/shop.html
@@ -34,44 +34,21 @@
     <aside>
       <form>
         <h2>ПРОИЗВОДИТЕЛИ:</h2>
-        <label>
-          <input type="checkbox" name="baxter-of-california">
-          <span></span>Baxter of California
-        </label>
-        <label>
-          <input type="checkbox" name="mr-natty">
-          <span></span>Mr Natty
-        </label>
-        <label>
-          <input type="checkbox" name="suavecito">
-          <span></span>Suavecito
-        </label>
-        <label>
-          <input type="checkbox" name="malin+goetz">
-          <span></span>Malin+Goetz
-        </label>
-        <label>
-          <input type="checkbox" name="murrays">
-          <span></span>Murray’s
-        </label>
-        <label>
-          <input type="checkbox" name="american-crew">
-          <span></span>American Crew
-        </label>
+        <ul>
+          <li><label><input type="checkbox" name="baxter-of-california">Baxter of California</label></li>
+          <li><label><input type="checkbox" name="mr-natty">Mr Natty</label></li>
+          <li><label><input type="checkbox" name="Suavecito">Suavecito</label></li>
+          <li><label><input type="checkbox" name="malin+goetz">Malin+Goetz</label></li>
+          <li><label><input type="checkbox" name="murrays">Murray’s</label></li>
+          <li><label><input type="checkbox" name="american-crew">American Crew</label></li>
+        </ul>
 
         <h2>ГРУППЫ ТОВАРОВ:</h2>
-        <label>
-          <input type="radio" name="razor-accessories">
-          <span></span>Бритвенные принадлежности
-        </label>
-        <label>
-          <input type="radio" name="razor-accessories">
-          <span></span>Средства для ухода
-        </label>
-        <label>
-          <input type="radio" name="care-products">
-          <span></span>Аксессуары
-        </label>
+        <ul>
+          <li><label><input type="radio" name="razor-accessories">Бритвенные принадлежности </label></li>
+          <li><label><input type="radio" name="accessories">Средства для ухода </label></li>
+          <li><label><input type="radio" name="care-products">Аксессуары </label></li>
+        </ul>
 
         <button class="btn" type="button">Показать</button>
       </form>
@@ -80,53 +57,70 @@
     <section class="items">
       <article class="item">
         <img src="img/item/item1.jpg" alt="Baxter of California">
-        <a href="item.html"><h2>Набор для путешествий<br>
-          «Baxter of California»</h2></a>
+        <h2><a href="item.html">
+          <span>Набор для путешествий</span><br>
+          «Baxter of California»</a>
+        </h2>
         <div class="buy">
           <div class="price">2900 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
+
       <article class="item">
         <img src="img/item/item2.jpg" alt="Baxter of California">
-        <a href="item.html"><h2>Увлажняющий кондиционер<br>
-          «Baxter of California»</h2></a>
+        <h2><a href="item.html">
+          <span>Увлажняющий кондиционер</span><br>
+          «Baxter of California»</a>
+        </h2>
         <div class="buy">
           <div class="price">750 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
+
       <article class="item">
         <img src="img/item/item3.jpg" alt="SUAVECITO">
-        <a href="item.html"><h2>Гель для волос<br>
-          «SUAVECITO»</h2></a>
+        <h2><a href="item.html">
+          <span>Гель для волос</span><br>
+          «SUAVECITO»</a>
+        </h2>
         <div class="buy">
           <div class="price">290 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
+
       <article class="item">
         <img src="img/item/item4.jpg" alt="American crew">
-        <a href="item.html"><h2>Глина для укладки волос<br>
-          «American crew»</h2></a>
+        <h2><a href="item.html">
+          <span>Глина для укладки волос</span><br>
+          «American crew»</a>
+        </h2>
         <div class="buy">
           <div class="price">500 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
+
       <article class="item">
         <img src="img/item/item5.jpg" alt="AMERICAN CREW">
-        <a href="item.html"><h2>Гель для волос<br>
-          «AMERICAN CREW»</h2></a>
+        <h2><a href="item.html">
+          <span>Гель для волос</span><br>
+          «AMERICAN CREW»</a>
+        </h2>
         <div class="buy">
           <div class="price">300 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
+
       <article class="item">
         <img src="img/item/item6.jpg" alt="Baxter of California">
-        <a href="item.html"><h2>Набор для бритья<br>
-          «Baxter of California»</h2></a>
+        <h2><a href="item.html">
+          <span>Набор для бритья</span><br>
+          «Baxter of California»</a>
+        </h2>
         <div class="buy">
           <div class="price">3900 РУБ.</div>
           <a class="btn" href="#">КУПИТЬ</a>
