footer & sprites & minor change html

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     </section>
     <section class="social">
       <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
-      <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
-      <a class="btn btn-social fb" href="#">ФЕЙСБУК</a>
-      <a class="btn btn-social in" href="#">ИНСТАГРАМ</a>
+      <a class="btn-social vk" href="#">ВКОНТАКТЕ</a>
+      <a class="btn-social fb" href="#">ФЕЙСБУК</a>
+      <a class="btn-social in" href="#">ИНСТАГРАМ</a>
     </section>
     <section class="copyright">
       <h4>РАЗРАБОТАНО:</h4>
