--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </article>
       <article>
         <h3>КРУТО</h3>
-        <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+        <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ.<br>МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО!<br>ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
       </article>
       <article>
         <h3>ДОРОГО</h3>
@@ -100,17 +100,19 @@
 <footer class="main-footer">
   <div class="layout-center clearfix">
     <section class="contacts">
-      <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
-      <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br> КАК НАС НАЙТИ?<br> ТЕЛЕФОН: +7 (495) 666-02-66</p>
+      <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="#">КАК НАС НАЙТИ?</a><br>
+        ТЕЛЕФОН: +7 (495) 666-02-66</p>
     </section>
     <section class="social">
-      <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
+      <p>ДАВАЙТЕ ДРУЖИТЬ!</p>
       <a class="btn-social vk" href="#">ВКОНТАКТЕ</a>
       <a class="btn-social fb" href="#">ФЕЙСБУК</a>
       <a class="btn-social in" href="#">ИНСТАГРАМ</a>
     </section>
     <section class="copyright">
-      <h4>РАЗРАБОТАНО:</h4>
+      <p>РАЗРАБОТАНО:</p>
       <a class="btn" href="#">HTMLACADEMY.RU</a>
     </section>
   </div>
