css for «price.html»

--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
         <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
-        <li><a class="active" href="shop.html">МАГАЗИН</a></li>
+        <li class="active"><a href="shop.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
@@ -45,9 +45,9 @@
 
         <h2>ГРУППЫ ТОВАРОВ:</h2>
         <ul>
-          <li><label><input type="radio" name="razor-accessories">Бритвенные принадлежности </label></li>
-          <li><label><input type="radio" name="accessories">Средства для ухода </label></li>
-          <li><label><input type="radio" name="care-products">Аксессуары </label></li>
+          <li><label><input type="radio" name="razor-accessories">Бритвенные принадлежности</label></li>
+          <li><label><input type="radio" name="care-products">Средства для ухода</label></li>
+          <li><label><input type="radio" name="accessories">Аксессуары</label></li>
         </ul>
 
         <button class="btn" type="button">Показать</button>
