--- a/item.html
+++ b/item.html
@@ -14,7 +14,7 @@
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
         <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
-        <li><a class="active" href="shop.html">МАГАЗИН</a></li>
+        <li class="active"><a href="shop.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
