--- a/price.html
+++ b/price.html
@@ -3,94 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <title>Цены</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="inner-page">
 <header class="main-header">
-  <div class="layout-center">
-    <nav>
+  <div class="layout-center clearfix">
+    <nav class="navigation">
       <a class="logo" href="index.html"><img src="img/logo.png" alt="Барбершоп"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
         <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
-        <li><a class="active" href="shop.html">МАГАЗИН</a></li>
+        <li class="active"><a>МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
-    <a class="btn btn-login" href="#">ВХОД</a>
+    <div class="user-block">
+      <a class="login" href="#">ВХОД</a>
+    </div>
   </div>
 </header>
 
 <main>
   <div class="layout-center">
-    <h1>ПРАЙС ЛИСТ</h1>
-    <ul class="breadcrumbs">
-      <li><a href="index.html"></a>ГЛАВНАЯ</li>
-      <li><a href="#">ПРАЙС-ЛИСТ</a></li>
-    </ul>
-
-    <b>ИСТИННО МУЖСКАЯ КЛАССИКА</b>
-
-    <div class="layout-left">
-      <div class="cleansers">
-        <h2>МЫ ИСПОЛЬЗУЕМ ТОЛЬКО ЛУЧШИЕ СРЕДСТВА:</h2>
-        <ul>
-          <li>Baxter of California</li>
-          <li>Mr Natty</li>
-          <li>Suavecito</li>
-          <li>Malin+Goetz</li>
-        </ul>
-      </div>
+    <div class="inner-page-header clearfix">
+      <h1>ПРАЙС-ЛИСТ</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">ГЛАВНАЯ</a></li>
+        <li><a class="current">ПРАЙС-ЛИСТ</a></li>
+      </ul>
     </div>
-    <div class="about-us">
-      <h2>НЕСКОЛЬКО СЛОВ О НАС:</h2>
-      <p>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это
-        уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-    </div>
-    <div class="layout-right">
-      <div class="price">
-        <h2>ЦЕНЫ НА УСЛУГИ НАШИХ МАСТЕРОВ:</h2>
-        <table>
-          <tr>
-            <td>СТРИЖКА</td>
-            <td>1500 Р.</td>
-          </tr>
-          <tr>
-            <td>СТРИЖКА БОРОДЫ</td>
-            <td>500 Р.</td>
-          </tr>
-          <tr>
-            <td>НАКРУТКА УСОВ</td>
-            <td>350 Р.</td>
-          </tr>
-        </table>
+    <div class="inner-content">
+      <div class="big-heading">
+        <h2>ИСТИННО МУЖСКАЯ КЛАССИКА</h2>
       </div>
-      <div class="location">
-        <p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в
-          обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и
-          свободно!</p>
+      <div class="inner-column clearfix">
+        <div class="inner-column-left">
+          <h3>МЫ ИСПОЛЬЗУЕМ ТОЛЬКО<br>ЛУЧШИЕ СРЕДСТВА:</h3>
+          <ul class="custom-list-1">
+            <li>Baxter of California</li>
+            <li>Mr Natty</li>
+            <li>Suavecito</li>
+            <li>Malin+Goetz</li>
+          </ul>
+        </div>
+        <div class="inner-column-right">
+          <h3>ЦЕНЫ НА УСЛУГИ<br>НАШИХ МАСТЕРОВ:</h3>
+          <table class="price-table">
+            <tr>
+              <td>СТРИЖКА</td>
+              <td>1500 Р.</td>
+            </tr>
+            <tr>
+              <td>СТРИЖКА БОРОДЫ</td>
+              <td>500 Р.</td>
+            </tr>
+            <tr>
+              <td>НАКРУТКА УСОВ</td>
+              <td>350 Р.</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="inner-column clearfix">
+        <h3>НЕСКОЛЬКО СЛОВ О НАС:</h3>
+        <div class="inner-column-left">
+          <div>
+            <p class="short-text">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это
+              уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+          </div>
+        </div>
+        <div class="inner-column-right">
+          <p class="short-text">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в
+            обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и
+            свободно!</p>
+        </div>
       </div>
     </div>
   </div>
 </main>
 
-<footer class="main-footer">
-  <div class="layout-center">
+<footer class="main-footer inner-page-footer">
+  <div class="layout-center clearfix">
     <section class="contacts">
-      <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
-      <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-        КАК НАС НАЙТИ?<br>
+      <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="#">КАК НАС НАЙТИ?</a><br>
         ТЕЛЕФОН: +7 (495) 666-02-66</p>
     </section>
     <section class="social">
-      <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
-      <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
-      <a class="btn btn-social fb" href="#">ФЕЙСБУК</a>
-      <a class="btn btn-social in" href="#">ИНСТАГРАМ</a>
+      <p>ДАВАЙТЕ ДРУЖИТЬ!</p>
+      <a class="btn-social vk" href="#">ВКОНТАКТЕ</a>
+      <a class="btn-social fb" href="#">ФЕЙСБУК</a>
+      <a class="btn-social in" href="#">ИНСТАГРАМ</a>
     </section>
     <section class="copyright">
-      <h4>РАЗРАБОТАНО:</h4>
+      <p>РАЗРАБОТАНО:</p>
       <a class="btn" href="#">HTMLACADEMY.RU</a>
     </section>
   </div>
