--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Барбершоп</title>
-
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -115,6 +117,26 @@
     </section>
   </div>
 </footer>
+
+<div class="modal-login">
+  <button class="modal-close" type="button" title="Закрыть">Закрыть</button>
+  <h2>Личный кабинет</h2>
+  <p>Введите пожалуйста свой логин и пароль</p>
+  <form>
+    <input class="login" type="text" placeholder="Логин">
+    <input class="pass" type="password" placeholder="Пароль">
+    <label class="login-check"><input type="checkbox"><span class="check-target"></span>Запомните меня</label>
+    <a class="restore" href="#">Я забыл пароль!</a>
+    <button class="btn" type="submit">Войти</button>
+  </form>
+</div>
+
+<div class="modal-map">
+  <button class="modal-close" type="button" title="Закрыть">Закрыть</button>
+  <div id="yandex-map"></div>
+</div>
+
+<div class="modal-overlay"></div>
 
 </body>
 </html>
