css for shop.html (crutch)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </article>
       <article>
         <h3>КРУТО</h3>
-        <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ.<br>МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО!<br>ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+        <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ.<br>МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО!<br>ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.
+        </p>
       </article>
       <article>
         <h3>ДОРОГО</h3>
