--- a/price.html
+++ b/price.html
@@ -16,8 +16,8 @@
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
-        <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
-        <li class="active"><a>МАГАЗИН</a></li>
+        <li class="active"><a>ПРАЙС-ЛИСТ</a></li>
+        <li><a href="shop.html">МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
