--- a/shop.html
+++ b/shop.html
@@ -3,35 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>Магазин</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body  class="inner-page">
 <header class="main-header">
-  <div class="layout-center">
-    <nav>
+  <div class="layout-center clearfix">
+    <nav class="navigation">
       <a class="logo" href="index.html"><img src="img/logo.png" alt="Барбершоп"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
         <li><a href="#">НОВОСТИ</a></li>
         <li><a href="price.html">ПРАЙС-ЛИСТ</a></li>
-        <li class="active"><a href="shop.html">МАГАЗИН</a></li>
+        <li class="active"><a>МАГАЗИН</a></li>
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
-    <a class="btn btn-login" href="#">ВХОД</a>
+    <div class="user-block">
+      <a class="login" href="#">ВХОД</a>
+    </div>
   </div>
 </header>
 
-<main>
-  <div class="layout-center">
-    <h1>СРЕДСТВА ДЛЯ УХОДА</h1>
-    <ul class="breadcrumbs">
-      <li><a href="index.html"></a>ГЛАВНАЯ</li>
-      <li><a href="#">МАГАЗИН</a></li>
-      <li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
-    </ul>
+<main class="main-shop">
+  <div class="layout-center clearfix">
+    <div class="inner-page-header clearfix">
+      <h1>СРЕДСТВА ДЛЯ УХОДА</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html"></a>ГЛАВНАЯ</li>
+        <li><a href="#">МАГАЗИН</a></li>
+        <li><a class="current">СРЕДСТВА ДЛЯ УХОДА</a></li>
+      </ul>
+    </div>
 
-    <aside>
+    <aside class="filter">
       <form>
         <h2>ПРОИЗВОДИТЕЛИ:</h2>
         <ul>
@@ -54,7 +61,8 @@
       </form>
     </aside>
 
-    <section class="items">
+
+    <section class="shop">
       <article class="item">
         <img src="img/item/item1.jpg" alt="Baxter of California">
         <h2><a href="item.html">
@@ -126,37 +134,36 @@
           <a class="btn" href="#">КУПИТЬ</a>
         </div>
       </article>
-    </section>
 
-    <section class="paginator">
-      <a class="btn" href="#">1</a>
-      <a class="btn active" href="#">2</a>
-      <a class="btn" href="#">3</a>
-      <a class="btn" href="#">4</a>
+      <section class="paginator">
+        <a class="btn" href="#">1</a>
+        <a class="btn active" href="#">2</a>
+        <a class="btn" href="#">3</a>
+        <a class="btn" href="#">4</a>
+      </section>
     </section>
   </div>
 </main>
 
-<footer class="main-footer">
-  <div class="layout-center">
+<footer class="main-footer inner-page-footer">
+  <div class="layout-center clearfix">
     <section class="contacts">
-      <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
-      <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-        КАК НАС НАЙТИ?<br>
+      <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="#">КАК НАС НАЙТИ?</a><br>
         ТЕЛЕФОН: +7 (495) 666-02-66</p>
     </section>
     <section class="social">
-      <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
-      <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
-      <a class="btn btn-social fb" href="#">ФЕЙСБУК</a>
-      <a class="btn btn-social in" href="#">ИНСТАГРАМ</a>
+      <p>ДАВАЙТЕ ДРУЖИТЬ!</p>
+      <a class="btn-social vk" href="#">ВКОНТАКТЕ</a>
+      <a class="btn-social fb" href="#">ФЕЙСБУК</a>
+      <a class="btn-social in" href="#">ИНСТАГРАМ</a>
     </section>
     <section class="copyright">
-      <h4>РАЗРАБОТАНО:</h4>
+      <p>РАЗРАБОТАНО:</p>
       <a class="btn" href="#">HTMLACADEMY.RU</a>
     </section>
   </div>
 </footer>
-
 </body>
 </html>
